2008-01-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-03
	* converter: bugfix to ConverterBase::getConfiguration()

2008-01-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-02
	* db: introduce proper exception handling
	* diff: introduce proper exception handling
	* migrator: introduce proper exception handling
	* data: fix/feature to ConfigurationModifier: only insert
	ShmStreamConsumer if none present in the configuration

2008-01-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-01
	* clean-up of confdb.gui.treetable

2008-01-18  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-19-00
	* add confdb.diff package
	* currently allows comparisons of entire configurations only
	* works together with edmConfDBDiff scripts, to be checked into
	EventFilter/Utilities/scripts

2008-01-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-18-04
	* gui upgrade: Search&Replace can now be applied to the entire
	configuration, not just to the parameters of a single template

2008-01-14  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-18-02
	* data bugfix (ModifierIntructions): if unreferenced sequences are
	requested via '--sequences', all daughter sequences and modules
	are now being requested as well, *unless* they are explicitely
	undefined (e.g. via --modules -myMod)
	* data bugfix: order templates for alphabetical template lists in
	search&replace

2008-01-14  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-18-01
	* data bugfix: correctly handle interpretation of '--sequences
	-myseq' and '--modules -mymod' (the '-' needs to be removed before
	registering the sequence/module as to be undefined)

2008-01-14  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-18-00
	* parser feature: specify relative release with '-m' option
	* data feature: allow for sequences and modules to be omitted in